Fix horizontal scroll of plain code block

--- a/source/css/_common.styl
+++ b/source/css/_common.styl
@@ -87,6 +87,7 @@ pre {
     padding: initial;
     font-size: 100%;
     padding: 1em !important;
+    overflow-x: auto;
   }
 }
 
